Added service & directive

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
         <button data-ng-if="student.editing" data-ng-click="resetStudent(student)">Cancel</button>
       </li>
     </ul>
+    <div data-student-count data-count="count"></div>
   </main>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
