--- a/app/index.html
+++ b/app/index.html
@@ -13,40 +13,9 @@
   </style>
 </head>
 <body data-ng-app="studentsApp">
-  <main data-ng-controller="StudentsController" data-ng-init="getAll()">
-    <h1>Student Grades App</h1>
-    <form name="newStudentForm" data-ng-submit="createStudent(newStudent)">
-      <label for="name">Student Name:
-        <input type="text" required data-ng-model="newStudent.name">
-      </label>
-      <label for="subject">Subject:
-        <input type="text" required data-ng-model="newStudent.subject">
-      </label>
-      <label for="grade">Grade:
-        <input type="text" required data-ng-model="newStudent.grade">
-      </label>
-      <button type="submit" data-ng-disabled="newStudentForm.$invalid">Create Student</button>
-    </form>
-    <ul id="studentslist">
-      <li class="{{student.status}}" data-ng-repeat="student in students">
-        <span data-ng-if="!student.editing">
-          Name: {{student.name}}<br>
-          Subject: {{student.subject}}<br>
-          Grade: {{student.grade}}<br>
-          <button data-ng-click="editStudent(student)">Edit</button>
-          <button data-ng-click="removeStudent(student)">Delete</button>
-        </span>
-        <form data-ng-if="student.editing" name="{{'studentForm' + student._id}}" data-ng-submit="updateStudent(student)">
-          <input type="text" data-ng-model="student.name">
-          <input type="text" data-ng-model="student.subject">
-          <input type="text" data-ng-model="student.grade">
-          <button type="submit">Save Changes</button>
-        </form>
-        <button data-ng-if="student.editing" data-ng-click="resetStudent(student)">Cancel</button>
-      </li>
-    </ul>
-    <div data-student-count data-count="count"></div>
-  </main>
+  <p data-ng-if="loggedIn()">{{username}} currently logged in. | <a href data-ng-click="logOut()">Log Out</a></p>
+  <h1>Student Grades App</h1>
+  <main data-ng-view></main>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
